@@ -16,6 +16,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug #2872247 [interface] Failed opening required 'mysql_charsets.lib.php', thanks to CyberLeo Kitsana - cyberleo
 - bug [structure] "In use" table incorrectly reported as "view" 
 - bug #2879909 [interface] Removed double htmlspecialchars when editing enum column
+- bug #2868328 [relations] Adding foreign key when table name contains a dot 
 
 3.2.2.1 (2009-10-12)
 - [security] XSS and SQL injection, thanks to Herman van Rink
